# pkg-info

./: .gitignore  README.md  pyproject.toml
pkg_info/: cli.py  log.py  pkg_info.py
tests/: test_foo.py
